app/css/hero-summary.css
.fade-in {
    opacity: 0;
    -webkit-animation: fade-in 0.5s;
    -webkit-animation-fill-mode: forwards;
    animation: fade-in 0.5s;
    animation-fill-mode: forwards;
}

.fade-out {
    opacity: 1;
    -webkit-animation: fade-out 0.5s;
    -webkit-animation-fill-mode: forwards;
    animation: fade-out 0.5s;
    animation-fill-mode: forwards;
}

.hero {
    text-align: left;
}

.hero.panel {
    position: relative;
    display: block;
    color: inherit;
    height: 330px;
    overflow: hidden;
}

.hero.panel:hover, 
.hero.panel:focus, 
.hero.panel:active {
    text-decoration: none;
}

.hero.panel:hover .overlay, 
.hero.panel:focus .overlay, 
.hero.panel:active .overlay {
    transform: scaleY(1);
}

.hero.panel:hover .title-container, 
.hero.panel:focus .title-container, 
.hero.panel:active .title-container {
    color: #fff;
    text-shadow: 1px 1px 2px #737373;
}

.overlay {
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    border-top-left-radius: 4px;
    border-top-right-radius: 4px;
    background-color: grey;
    transform-origin: 50% 0%;
    transform: scaleY(0.2);
    z-index: 10;
    transition: transform 0.5s;
}

.overlay.fill {
    -webkit-animation: overlay-fill 0.5s;
    -webkit-animation-fill-mode: forwards;
    animation: overlay-fill 0.5s;
    animation-fill-mode: forwards;
}

.title-container {
    position: relative;
    text-align: center;
    text-shadow: none;
    color: #333;
    z-index: 0;
    transition: color 0.5s ease, text-shadow 0.5s ease;
}

.body {
    padding: 10px;
    text-align: left;
}

.hero-remove {
    float: right;
    font-size: 20px;
    background-color: #fff;
    color: #f7615c;
    transition: all 0.1s ease;
    z-index: 30;
}

.hero-remove:before {
    position: absolute;
    padding: 16px;
    background-image: radial-gradient(#fff 8px, transparent 1px);
    border-radius: 20px;
    top: -24px;
    right: -24px;
}

.hero-remove:hover:before {
    background-image: radial-gradient(#fff 9px, transparent 1px);
}

.hero-remove:hover {
    font-size: 22px;
    cursor: pointer;
    color: red;
}

.hero-name {
    position: relative;
    text-align: right;
    margin: 0px;
    line-height: 40px;
    font-size: 18px;
    z-index: 20;
}

.hero-icon {
    position: absolute;
    top: 16px;
    left: 6%;
    font-size: 40px;
    opacity: 0.99;  /* Fix for mobile safari text-shadow rendering issue  */
    z-index: 20;
}

.hero-status {
    text-align: center;
    overflow: visible;
}

.hero-status .glyphicon-alert {
    color: #f7615c;
    width: 100%;
    font-size: 36px;
    margin-bottom: 8px;
    -webkit-animation: jiggle 1.5s ease-in-out infinite alternate;
    -moz-animation: jiggle 1.5s ease-in-out infinite alternate;
    -o-animation: jiggle 1.5s ease-in-out infinite alternate;
    animation: jiggle 1.5s ease-in-out infinite alternate;
}

.section-label {
    font-weight: 400;
    font-size: 11px;
    margin: 0;
    color: #777;
    text-align: center;
}

.stat-label {
    font-weight: 400;
    margin-top: 12px;
    margin-bottom: 2px;
}

.stat-section {
    margin-bottom: 8px;
}

.stat-bar-container {
    position: relative;
    padding: 0;
    margin: 0;
    -webkit-border-radius: 2px;
    -moz-border-radius: 2px;
    border-radius: 2px;
    background-color: rgba(200, 200, 200, .5);
}

.stat-bar {
    height: 16px;
    /* background-color: #f99e1a; */
    background-color: #405275;
    -webkit-border-radius: 2px;
    -moz-border-radius: 2px;
    border-radius: 2px;
    width: 100%;
    transform: scaleX(1);
    transform-origin: 0% 50%;
    -webkit-transition: transform 1s ease-in-out;
    -moz-transition: transform 1s ease-in-out;
    -o-transition: transform 1s ease-in-out;
    transition: transform 1s ease-in-out;
    -webkit-animation: stat-bar-anim 2s ease-out;
    animation: stat-bar-anim 2s ease-out
}

.stat-value {
    position: absolute;
    top: 0;
    left: 4px;
    color: #fff;
    line-height: 16px;
    font-size: 12px;
}

/* .stat-section:nth-child(even) .stat-bar {
    background-color: #405275;
} */



 /* ----- HERO SELECT ----- */

 .hero-grid .well {
    background-color: rgba(255, 255, 255, .5);
    margin-bottom: 0;
}

.hero-grid {
    margin-bottom: 40px;
}


 /* ----- HERO SELECT MOBILE ----- */

 .btn-group .dropdown-menu {
    padding: 0;
}

.dropdown-menu>.dropdown-menu-container>li:not(:first-child):not(:last-child):not(.dropdown-toggle)>label.btn {
    border-radius: 0;
}

.dropdown-menu>.dropdown-menu-container>li:first-child:not(:last-child):not(.dropdown-toggle)>label.btn {
    border-bottom-right-radius: 0;
    border-bottom-left-radius: 0;
}

.dropdown-menu>.dropdown-menu-container>li:last-child:not(:first-child):not(.dropdown-toggle)>label.btn {
    border-top-right-radius: 0;
    border-top-left-radius: 0;
}



/* ----- HERO MULTIPLE VIEW ----- */

.title-container.summary {
    height: 60px;
    padding: 16px 6%;
}



 /* ----- HERO SINGLE VIEW ----- */

.hero {
    font-size: 16px;
}

.hero.panel.single:not(.placeholder) {
    height: initial;
}

.title-container.full {
    height: 96px;
    padding-top: 30px;
    color: #fff;
    text-shadow: 1px 1px 2px #737373;
}

.hero.single .body {
    padding: 30px;
    padding-top: 10px;
}

.hero-icon.full-page {
    position: absolute;
    top: -50px;
    left: calc(50vw - 500px);
    font-size: 1000px;
    z-index: -5;
    opacity: 0.1;
}

.title {
    position: relative;
    margin-top: 0;
    margin-bottom: 30px;
    font-size: 36px;
    z-index: 20;
}




/* ----- PLACEHOLDER ----- */

.panel.placeholder {
    background-color: rgba(177, 177, 177, 0.29);
}

.overlay.placeholder {
    background-color: rgba(128, 128, 128, 0.47);
}

.spinner.placeholder {
    position: absolute;
    border-width: 7px;
    height: 40px;
    width: 40px;
    top: 10px;
    left: 6%;
    animation: spin 2s linear infinite;
}

.hero.single .spinner.placeholder {
    position: absolute;
    border-width: 7px;
    height: 40px;
    width: 40px;
    top: 29px;
    left: 6%;
    animation: spin 2s linear infinite;
}

hr.placeholder {
    border-color: rgba(196, 196, 196, 0.7);
}

.stat-bar-container.placeholder {
    margin-bottom: 30px;
}

.stat-bar-container.placeholder .stat-bar {
    background-color: rgba(117, 117, 117, 0.4);
}

.stat-bar.empty {
    transform: scaleX(0.15);
}

.stat-bar.quarter {
    transform: scaleX(0.25);
}

.stat-bar.half {
    transform: scaleX(0.5);
}

.stat-bar.seventy-five {
    transform: scaleX(0.75);
}




 /* ----- ANIMATIONS ----- */

@-webkit-keyframes fade-in {
    100% { opacity: 1; }
}@keyframes fade-in {
    100% { opacity: 1; }
}

@-webkit-keyframes fade-out {
    100% { opacity: 0; }
}@keyframes fade-out {
    100% { opacity: 0; }
}

@-webkit-keyframes jiggle {
    0%, 66%     { -webkit-transform: scale(1); }
    100%        { -webkit-transform: scale(1.1); }
}@-moz-keyframes jiggle {
    0%, 66%     { -moz-transform: scale(1); }
    100%        { -moz-transform: scale(1.1); }
}@-o-keyframes jiggle {
    0%, 66%     { -o-transform: scale(1); }
    100%        { -o-transform: scale(1.1); }
}@keyframes jiggle {
    0%, 66%     { transform: scale(1); }
    100%        { transform: scale(1.1); }
}

@-webkit-keyframes stat-bar-anim {
    0% { transform: scaleX(0); }
}

@-webkit-keyframes overlay-fill {
    100% { transform: scaleY(1); }
}@keyframes overlay-fill {
    100% { transform: scaleY(1); }
}



/*================
  MEDIA QUERIES
 ===============*/

/* Small devices (tablets, 768px and up) */
@media (min-width: 768px) {

    .hero.panel {
        height: 540px;
    }

    .title-container.summary {
        height: 220px;
        padding: 30px 20px 0px 20px;
    }

    .hero-name {
        margin-top: 20px;
        margin-left: 0px;
        text-align: center;
        font-size: 30px;
        line-height: 1;
    }

    .hero-icon {
        font-size: 120px;
        text-align: center;
        position: relative;
        top: initial;
        left: initial;
    }

    .overlay {
        transform: scaleY(0.1);
    }

    .stat-bar {
        height: 24px;
    }
    
    .stat-value {
        left: 6px;
        line-height: 24px;
        font-size: 14px;
    }

    .spinner.placeholder,
    .hero.single .spinner.placeholder {
        position: relative;
        border-width: 16px;
        left: 0;
        margin-left: auto;
        margin-right: auto;
        height: 120px;
        width: 120px;
    }

    .panel.stats.placeholder {
        height: 540px;
    }

}

/* Medium devices (desktops, 992px and up) */
@media (min-width: 992px) {
    
}

/* Large devices (large desktops, 1200px and up) */
@media (min-width: 1200px) {

}




/* ----- HERO COLORS -----  */

.genji {
    background-color: #bae77a;
}

.mccree {
    background-color: #795c42;
}

.pharah {
    background-color: #1f73c3;
}

.reaper {
    background-color: #5e5c50;
}

.soldier76 {
    background-color: #525d9b;
}

.tracer {
    background-color: #fccf35;
}

.sombra {
    background-color: #9765de;
}

.bastion {
    background-color: #7a9767;
}

.hanzo {
    background-color: #837c46;
}

.junkrat {
    background-color: #c7712a;
}

.mei {
    background-color: #555576;
}

.torbjorn {
    background-color: #de584c;
}

.widowmaker {
    background-color: #171939;
}

.dva {
    background-color: #feabe6;
}

.reinhardt {
    background-color: #b9b5ad;
}

.roadhog {
    background-color: #566565;
}

.winston {
    background-color: #e9a92e;
}

.zarya {
    background-color: #5588a2;
}

.orisa {
    background-color: #97ab40;
}

.ana {
    background-color: #6591ee;
}

.lucio {
    background-color: #8de141;
}

.mercy {
    background-color: #f5e4a9;
}

.symmetra {
    background-color: #33b9f8;
}

.zenyatta {
    background-color: #6f241e;
}

